about word spacing fix

--- a/frontend/Kern Family Zoo/src/styles/about.css
+++ b/frontend/Kern Family Zoo/src/styles/about.css
@@ -4,7 +4,7 @@
 }
 
 p {
-    text-align: justify;
+    text-align: left;
     font-size: 20px;
     font-weight: 600;
 }
