--- a/frontend/Kern Family Zoo/src/styles/modal.css
+++ b/frontend/Kern Family Zoo/src/styles/modal.css
@@ -64,8 +64,8 @@
     cursor: pointer;
 }
 .modal img{
-    border: 1px solid white;
-    max-width: 90%;
-    max-height: 90%;
+    /* border: 1px solid white; */
+    max-width: 95%;
+    max-height: 95%;
     object-fit: contain;
 }
